              Netpbm 10.91 (June 2020).

              pgmtopbm: Add -randomseed.

              pcdovtoppm: Fix some garbage from the conversion from csh to sh
              in Netpbm 9.12 (March 2001) in conversion from csh arrays that
              should have stopped it from working at all, despite reports from
              users that they were using it.

20.06.28 BJH  Release 10.91.00

              pamstretch-gen: Add -quiet (supposedly added in 10.86, but never
              worked).

              pamstereogram: Add -tileable.  Thanks Scott Pakin.

              pcdovtoppm: Implement -version, -plain, and -quiet.

              pcdovtoppm: more secure temporary file handling.

              pcdovtoppm: Improve the way it fails when 'hpcdtoppm' fails.

              anytopnm, pnmmargin: Fail properly when unable to create
              temporary file.  Broken in Netpbm 10.75 (June 2016).

              winicontoppm: Fix undefined behavior for various invalid input.
              Always broken.  Winicontoppm was new in Netpbm 9.3 (June 2000).

              winicontoppm: Fix incorrect output with 256 pixel wide or high
              image.  Always broken.  Winicontoppm was new in Netpbm 9.3 (June
              2000).

              pjtoppm: Handle input stream with no transmission mode command.
              Always broken.  Pjtoppm was in primordial Netpbm (1991).

              cameratopam: Handle I/O error on input file.  Always broken.
              Cameratopam was new to Netpbm in Netpbm 10.25 (June 2005).

              xbmtopbm: Recognize "unsigned short" as an extension of
              XBM X10 format.

              pjtoppm: Fix handling of input with width unspecified or not
              positive.  Always broken.  (Pjtoppm was in primordial Netpbm, ca
              1991).

              winicontopam: Fix crash with PNG icon.  Always broken.
              Winicontopam was new in Netpbm 10.63 (June 2013).
